--- a/tempc++/Makefile
+++ b/tempc++/Makefile
@@ -1,2 +1,12 @@
-main: main.cpp
-	g++ -o main.exe main.cpp
+#main: calc.o mylib.o
+#	g++ -o a.exe calc.o mylib.o
+#
+#calc.o: calc.cpp
+#	g++ -c calc.cpp
+#
+#mylib.o: mylib.cpp
+#	g++ -c mylib.cpp
+
+main: calc.cpp mylib.cpp
+	g++ -o a.exe calc.cpp mylib.cpp
+
